added fullscreen and screenlock

--- a/src/app/components/config/config.component.html
+++ b/src/app/components/config/config.component.html
@@ -53,7 +53,7 @@
 <div class="row pt-2">
   <div class="col-12 text-center mt-5">
     <button class="btn btn-lg btn-secondary btn-start px-5" type="button"
-            (click)="router.navigateByUrl('/workout')"> START
+            (click)="this.service.start()"> START
     </button>
   </div>
 </div>
