--- a/src/app/components/workout/workout.component.html
+++ b/src/app/components/workout/workout.component.html
@@ -7,7 +7,7 @@
 <div class="row pt-4">
   <div class="col-12 text-center mt-3">
     <button class="btn btn-lg btn-secondary btn-finish px-5" type="button"
-            (click)="router.navigateByUrl('/config')"> FINISH
+            (click)="this.service.stop()"> FINISH
     </button>
   </div>
 </div>
